--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
     "react": "^16.2.0",
+    "react-autosize-textarea": "^3.0.2",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "socket.io": "^2.0.4",
