fixup! Fix mlab config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "faker": "^4.1.0",
     "mongod": "^2.0.0",
@@ -26,8 +27,5 @@
     "eject": "react-scripts eject",
     "client": "react-scripts start",
     "server": "nodemon -w server.js -w src/server server.js"
-  },
-  "devDependencies": {
-    "dotenv": "^5.0.1"
   }
 }
