--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,7 @@
   "extends": ["import", "react", "prettier"],
   "parser": "babel-eslint",
   "env": {
-    "browser": true
-  },
-  "rules": {
-    "jsx-a11y": 0,
-    "import/prefer-default-export": 0,
-    "react/prefer-stateless-function": 0
+    "browser": true,
+    "node": true
   }
 }
