--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "faker": "^4.1.0",
     "mongod": "^2.0.0",
-    "mongodb": "^3.0.3",
+    "mongodb": "^3.0.5",
     "nodemon": "^1.15.1",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-autosize-textarea": "^3.0.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "socket.io": "^2.0.4",
-    "socket.io-client": "^2.0.4",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "socket.io-cookie-parser": "^1.0.0",
     "uuid": "^3.2.1"
   },
