--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-config-react": "^1.1.7",
     "stylelint-config-standard": "^18.2.0"
   }
 }
