--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "babel-core": "^6.26.0",
     "classnames": "^2.2.5",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
@@ -13,13 +14,14 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-autosize-textarea": "^3.0.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0",
     "react-scripts": "1.1.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "socket.io-cookie-parser": "^1.0.0",
+    "storybook": "^1.0.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -28,6 +30,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "client": "react-scripts start",
-    "server": "nodemon -w server.js -w src/server server.js"
+    "server": "nodemon -w server.js -w src/server server.js",
+    "storybook": "start-storybook -p 9001 -c .storybook"
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.4.0"
   }
 }
