--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.5",
     "nodemon": "^1.15.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-autosize-textarea": "^3.0.2",
     "react-dom": "^16.3.0",
