--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,13 @@
 {
-  "extends": ["import", "react", "prettier"],
+  "extends": ["eslint:recommended", "react", "prettier"],
   "parser": "babel-eslint",
   "env": {
+    "jest": true,
+    "es6": true,
     "browser": true,
     "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6
   }
 }
