--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.3",
     "debounce": "^1.1.0",
     "dotenv": "^5.0.1",
+    "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "mongod": "^2.0.0",
@@ -22,6 +23,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-test-renderer": "^16.3.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.1.0",
@@ -40,11 +42,12 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
+    "@storybook/react": "^3.4.0",
+    "enzyme": "^3.3.0",
     "eslint": "^4.19.1",
     "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
-    "stylelint-config-standard": "^18.2.0",
-    "@storybook/react": "^3.4.0"
+    "stylelint-config-standard": "^18.2.0"
   }
 }
