--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "jest-fetch-mock": "^1.5.0",
     "mongod": "^2.0.0",
     "mongodb": "^3.0.5",
     "nodemon": "^1.15.1",
@@ -40,11 +41,11 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "devDependencies": {
+    "@storybook/react": "^3.4.0",
     "eslint": "^4.19.1",
     "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
-    "stylelint-config-standard": "^18.2.0",
-    "@storybook/react": "^3.4.0"
+    "stylelint-config-standard": "^18.2.0"
   }
 }
