--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": ["eslint:recommended", "react", "prettier"],
+  "rules": {
+    "no-new": [1]
+  },
   "parser": "babel-eslint",
   "env": {
     "jest": true,
